--- a/src/_assets/css/_landing-page.scss
+++ b/src/_assets/css/_landing-page.scss
@@ -84,7 +84,7 @@
 
     &__logo-row {
       &:not(:last-child) {
-        margin-bottom: bs-spacer(12);
+        margin-bottom: bs-spacer(2);
       }
     }
   }
